--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BA English</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>sanjaymsdev00@gmail.com.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Not Available</span></li>
                 </ul>
@@ -518,12 +518,12 @@
           document.getElementById("email").style.borderColor = "red";
         }
         else if(subject == "") {
-          swal("Error!", "Name is required!", "error");
+          swal("Error!", "Subject is required!", "error");
           document.getElementById("subject").focus();
           document.getElementById("subject").style.borderColor = "red";
         }
         else if(message == "") {
-          swal("Error!", "Name is required!", "error");
+          swal("Error!", "Message is required!", "error");
           document.getElementById("message").focus();
           document.getElementById("message").style.borderColor = "red";
         }
@@ -534,7 +534,7 @@
               data:$("#submit-form").serialize(),
               method:"post",
               success:function (response){
-                swal("Success!", "You clicked the button!", "success");
+                swal("Success!", "Form Submitted Successfully!", "success");
                 setTimeout(pageReload, 2000)
               },
               error:function (err){
