--- a/portfolio.html
+++ b/portfolio.html
@@ -129,12 +129,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-active">
             <div class="portfolio-wrap">
-              <img src="assets/img/Screenshot-(47).jpg" class="img-fluid" alt="">
+              <img src="assets/img/Screenshot-(47).webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>App 1</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/Screenshot-(47).jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bi bi-folder2-open"></i></a>
+                  <a href="assets/img/Screenshot-(47).webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bi bi-folder2-open"></i></a>
                   <a href="https://sanjayms00.github.io/free-templates-website/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -143,12 +143,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/Screenshot-(52).jpg" class="img-fluid" alt="">
+              <img src="assets/img/Screenshot-(52).webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Web 3</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/Screenshot-(52).jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bi bi-folder2-open"></i></a>
+                  <a href="assets/img/Screenshot-(52).webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bi bi-folder2-open"></i></a>
                   <a href="https://eternalbautycare.com" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -157,12 +157,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/Screenshot-(51).jpg" class="img-fluid" alt="">
+              <img src="assets/img/Screenshot-(51).webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>App 2</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/Screenshot-(51).jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bi bi-folder2-open"></i></a>
+                  <a href="assets/img/Screenshot-(51).webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bi bi-folder2-open"></i></a>
                   <a href="https://sanjayms00.github.io/ather" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -171,12 +171,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/Screenshot-(54).jpg" class="img-fluid" alt="">
+              <img src="assets/img/Screenshot-(54).webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Card 2</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/Screenshot-(54).jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bi bi-folder2-open"></i></a>
+                  <a href="assets/img/Screenshot-(54).webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bi bi-folder2-open"></i></a>
                   <a href="https://stuaham.com" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -185,12 +185,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/Screenshot-(53).jpg" class="img-fluid" alt="">
+              <img src="assets/img/Screenshot-(53).webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Web 2</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/Screenshot-(53).jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bi bi-folder2-open"></i></a>
+                  <a href="assets/img/Screenshot-(53).webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bi bi-folder2-open"></i></a>
                   <a href="https://holyfamilyschool.edu.in" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
