--- a/portfolio.html
+++ b/portfolio.html
@@ -149,7 +149,7 @@
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="assets/img/Screenshot-(52).webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bi bi-folder2-open"></i></a>
-                  <a href="https://eternalbautycare.com" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bi bi-link-45deg"></i></a>
+                  <a href="https://eternalbeautycare.com/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
