edited the resume section

--- a/index.html
+++ b/index.html
@@ -236,36 +236,39 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <!-- <p>Proven team player when working with internal
-            cross-functional departments. Thrive in hands-on, action-oriented culture by
-            working well under pressure and adapting to change quickly.
-          </p> -->
         </div>
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Connect with me</h3>
             <div class="resume-item pb-0">
               <h4>Sanjay M S</h4>
-              <p><em>Innovative Web Developer with 1 years of experience designing and developing user-centered websited
-                  from initial concept to final.</em></p>
               <ul>
+                <li>
+                  <a href="mailto: connectsanjayms@gmail.com">connectsanjayms@gmail.com</a>
+                </li>
+                <li>
+                  <a href="tel: +91 7025903817">+91 7025903817</a>
+                </li>
                 <li>Thrissur, Kerala, India</li>
-                <li>+91 7025903817</li>
-                <li>sanjaymsdev00@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor of Arts - Literature in English</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Calicut University, Kerala</em></p>
+              <h4>mean stack development</h4>
+              <h5>Mar 2023 - Present</h5>
+              <p><em>BROTOTYPE, Kochi, Kerala</em></p>
             </div>
             <div class="resume-item">
               <h4>Diploma in Multi Media Animation</h4>
               <h5>2018 - 2019</h5>
               <p><em>Smart Media College Thrissur, Kerala</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Bachelor of Arts - Literature in English</h4>
+              <h5>2015 - 2016</h5>
+              <p><em>Calicut University, Kerala</em></p>
             </div>
             <div class="resume-item">
               <h4>Plus Two - Computer Science</h4>
@@ -280,17 +283,21 @@
           </div>
 
           <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
               <h4>PHP DEVELOPER</h4>
               <h5>Feb2022 - march 2023</h5>
               <p><em>INTERNETEVER TECHNOLOGIES FZE</em></p>
               <ul>
-                <li>Wrote server-side and client-side code for web applications using PHP, HTML, CSS
-                  and JavaScript.</li>
-                <li>Performed troubleshooting of technical issues within a production environment.</li>
-                <li>Modified and tested existing MySQL database schemas.</li>
-                <li>Developed back-end components to connect applications with web services.</li>
+                <li>Developed server-side and client-side code for web applications using PHP,
+                  HTML, CSS, JavaScript, and JQuery..</li>
+                <li>Troubleshoot technical issues in a production environment using Cpanel and fileZilla. Modified RDBMS (MySQL) schemas, and implemented customer requirements into the website.</li>
+                <li>Planned, coded and deployed web-based applications.</li>
+                <li>
+                  Engaged with the application team to enhance processes, stay updated on
+                  industry trends, and develop back-end components to connect applications
+                  with web services.
+                </li>
               </ul>
             </div>
             <div class="resume-item">
@@ -298,12 +305,13 @@
               <h5>DEC 2020 - NOV 2021</h5>
               <p><em>Smart Media College - Thrissur, India</em></p>
               <ul>
-                <li>Pitched feature improvements to developer team for use in applications.</li>
-                <li>Troubleshot and debugged code ensuring compatibility with devices, browsers, and
-                  operating systems.</li>
-                <li>Developed user interfaces with modern JavaScript frameworks, HTML5 and CSS3.</li>
-                <li>Studied user requirements to gain strong understanding of project initiatives and
-                  deadlines.</li>
+                <li>Developed websites with the latest technologies using HTML5, CSS3,
+                  Bootstrap, JavaScript and Core PHP.</li>
+                <li>Pitched feature improvements and collaborated with the developer team.</li>
+                <li>Managed clerical duties forthe web development staff, ensuring smooth
+                  departmental operations.</li>
+                <li>Troubleshoot and debug code for compatibility and responsiveness across
+                  devices and browsers.</li>
               </ul>
             </div>
           </div>
@@ -312,7 +320,7 @@
       </div>
     </section><!-- End Resume Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ======= works Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -331,6 +339,7 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-bootcamp">
             <div class="portfolio-wrap">
               <img src="assets/img/elearn.png" class="img-fluid" alt="elearn image">
@@ -384,6 +393,21 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-bootcamp">
+            <div class="portfolio-wrap">
+              <img src="assets/img/ather.webp" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Ather</h4>
+                <p>website clone</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/ather.webp" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Ather website clone"><i class="bi bi-arrows-fullscreen"></i></a>
+                  <a href="https://sanjayms00.github.io/ather" target="_blank"><i class="bi bi-box-arrow-up-right"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-company">
             <div class="portfolio-wrap">
               <img src="assets/img/eternal-beauty-care.webp" class="img-fluid" alt="">
@@ -418,17 +442,17 @@
               </div>
             </div>
           </div>
-
+          
           <div class="col-lg-4 col-md-6 portfolio-item filter-company">
             <div class="portfolio-wrap">
-              <img src="assets/img/ather.webp" class="img-fluid" alt="">
+              <img src="assets/img/holy-family-convent.webp" class="img-fluid" alt="HOLY FAMILY CONVENT HR. SEC. SCHOOL">
               <div class="portfolio-info">
-                <h4>Ather</h4>
-                <p>website clone</p>
+                <h4>HOLY FAMILY CONVENT HR. SEC. SCHOOL</h4>
+                <p>Convent school website</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/ather.webp" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Ather website clone"><i class="bi bi-arrows-fullscreen"></i></a>
-                  <a href="https://sanjayms00.github.io/ather" target="_blank"><i class="bi bi-box-arrow-up-right"></i></a>
+                  <a href="assets/img/holy-family-convent.webp" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="HOLY FAMILY CONVENT HR. SEC. SCHOOL"><i class="bi bi-arrows-fullscreen"></i></a>
+                  <a href="https://holyfamilyschool.edu.in" target="_blank"><i class="bi bi-box-arrow-up-right"></i></a>
                 </div>
               </div>
             </div>
@@ -449,25 +473,10 @@
             </div>
           </div>
 
-          <!-- HOLY FAMILY CONVENT HR. SEC. SCHOOL -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-company">
-            <div class="portfolio-wrap">
-              <img src="assets/img/holy-family-convent.webp" class="img-fluid" alt="HOLY FAMILY CONVENT HR. SEC. SCHOOL">
-              <div class="portfolio-info">
-                <h4>HOLY FAMILY CONVENT HR. SEC. SCHOOL</h4>
-                <p>Convent school website</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/holy-family-convent.webp" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="HOLY FAMILY CONVENT HR. SEC. SCHOOL"><i class="bi bi-arrows-fullscreen"></i></a>
-                  <a href="https://holyfamilyschool.edu.in" target="_blank"><i class="bi bi-box-arrow-up-right"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
         </div>
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>
+    <!-- End works Section -->
 
     <!-- ======= Contact Section ======= -->
     <!-- <section id="contact" class="contact">
@@ -537,7 +546,8 @@
     </section> -->
     <!-- End Contact Section -->
 
-  </main><!-- End #main -->
+  </main>
+  <!-- End #main -->
 
 
   <!-- ======= Footer ======= -->
