added download option

--- a/index.html
+++ b/index.html
@@ -235,7 +235,13 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Resume</h2>
+          <h2>Resume 
+            <span>
+              <a href="https://drive.google.com/uc?export=download&id=1mRVzIW-GlGOmHFD4Bgj5AlyZ1wE3B__p">
+                <i class="bi bi-cloud-arrow-down-fill"></i>
+              </a>
+            </span>
+        </h2>
         </div>
 
         <div class="row">
