--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <meta name="theme-color" media="(prefers-color-scheme: light)" content="cyan" />
   <meta name="theme-color" media="(prefers-color-scheme: dark)" content="black" />
 
-  <title>MyResume Bootstrap Template - Index</title>
+  <title>SANJAY_M_S_PORTFOLIO</title>
 
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.jpg" rel="icon">
+  <link href="assets/img/favicon.png" rel="icon">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -61,6 +61,9 @@
       <div class="social-links">
         <a href="https://github.com/sanjayms00" class="git-hub"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/sanjay-m-s-8a867222b/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://drive.google.com/uc?export=download&id=1mRVzIW-GlGOmHFD4Bgj5AlyZ1wE3B__p">
+          <i class="bi bi-cloud-arrow-down-fill"></i>
+        </a>
       </div>
     </div>
   </section><!-- End Hero -->
