icons and linked in url

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <!-- ======= Mobile nav toggle button ======= -->
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
-  <!-- <i class="bi bi-list mobile-nav-toggle d-lg-none"></i> -->
+  <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex flex-column justify-content-center">
 
@@ -60,10 +60,8 @@
       <p>Hi, I'm a <span class="typed" data-typed-items="MEAN Stack Developer"></span></p>
       <div class="social-links">
         <a href="https://github.com/sanjayms00" class="git-hub"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/sanjay-m-s-8a867222b/" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        <a href="https://drive.google.com/uc?export=download&id=1mRVzIW-GlGOmHFD4Bgj5AlyZ1wE3B__p">
-          <i class="bi bi-cloud-arrow-down-fill"></i>
-        </a>
+        <a href="https://www.linkedin.com/in/sanjay-m-s-dev" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://medium.com/@sanjaymsdev00" class="linkedin"><i class="bi bi-medium"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -566,7 +564,8 @@
       <p><q>Thanks for visiting....</q></p>
       <div class="social-links">
         <a href="https://github.com/sanjayms00" class="git-hub"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/sanjay-m-s-8a867222b/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/sanjay-m-s-dev" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://medium.com/@sanjaymsdev00" class="linkedin"><i class="bi bi-medium"></i></a>
       </div>
       <div class="copyright"> 2024 &copy; Copyright All Rights Reserved
       </div>
